# MuSe-Toolbox

./: README.md  requirements.txt  setup.cfg
examples/metadata/: partition.csv
examples/metadata/segment_info/: 11.csv  32.csv  47.csv
examples/processed/arousal/: 11.csv  32.csv  47.csv
examples/raw/arousal/: 11.csv  32.csv  47.csv
scripts/: diarisation.sh  gold_standard.sh  plot_gs.py
src/muse-toolbox/: __main__.py  main.py
src/muse-toolbox/diarisation/: README.md  cluster_naming.py  config.py  diarisation.py  evaluation.py  feature_configs.py  feature_extraction.py  feature_reduction.py  plots.py  radar_chart.py  som.py  utils.py
src/muse-toolbox/diarisation/clustering_algorithms/: AgglomerativeClustering.py  Dbscan.py  FuzzyCMeans.py  GaussianMixturModels.py  Hdbscan.py  KMeans.py
src/muse-toolbox/gold_standard/: CTW.py  DBA.py  EWE.py  README.md  alignment.py  fusion.py  gold_standard.py  interrater_agreement.py  preprocessing.py  smoothing.py  utils.py
src/muse-toolbox/gold_standard/ctw/: README.md  applyctw.m
src/muse-toolbox/gold_standard/ctw/lib/cell/: cellss.mex  oness.mex  zeross.mex
src/muse-toolbox/gold_standard/ctw/lib/img/: maskOver.mex
src/muse-toolbox/gold_standard/ctw/lib/imgFeat/: imgFeat.m  imgFeatMbp.m  imgFeatMser.m  imgFeatRegOld.m  imgFeatShp.m  imgFeatSift.m  imgFeatSiftF.m  imgFeatSiftFFast.m
src/muse-toolbox/gold_standard/ctw/lib/imgFeat/ACC/: compute_norm_trans_image.m  extract_localfeatures_mcho.m  gensiftdesc.m  purifyFeat.m
src/muse-toolbox/gold_standard/ctw/lib/text/: atof.mex  atoi.mex  tokenise.mex
(+9 files in other folders)
