[metadata]
# replace with your username:
name = MuSe-Toolbox-leaschumann
version = 0.0.1
author = Lukas Stappen
author_email = contact.muse2020@gmail.com
description = MuSe-Toolbox is a open-source toolkit for creating a variety of continuous and discrete emotion gold standards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/MuSe-Toolbox
project_urls =
    Bug Tracker = https://github.com/pypa/MuSe-Toolbox/issues
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src